# jmx

./: .gitignore  .temp.un~  CMakeLists.txt  README.txt  jmx.grammar  langspec.md
calculater_exercise/: .calculator.cpp.un~  Lexer.h  Parser.h  Token.cpp  Token.h  a.out  calculator.cpp  main.cpp
src/: CMakeLists.txt  Errors.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenType.h  main.cpp
src/AST/: BinOp.cpp  BinOp.h  Node.h  NodeType.h  Num.cpp  Num.h  Token.cpp  Token.h  TokenType.h
test/: BinOpTest.cpp  CMakeLists.txt  InterpreterTest.cpp  LexerTest.cpp  NumTest.cpp  ParserTest.cpp  RunTests.cpp  TokenTest.cpp
